<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_title" />

        <EditText
            android:id="@+id/et_title_income"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/background_edit_text"
            android:inputType="text"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            tools:ignore="labelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_price" />

        <EditText
            android:id="@+id/et_price_income"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@drawable/background_edit_text"
            android:inputType="number"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            tools:ignore="labelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_income"
        android:layout_width="114dp"
        android:layout_height="42dp"
        android:layout_gravity="end"
        android:background="@drawable/background_button"
        android:text="@string/action_save"
        android:textColor="@color/colorWhite" />

</LinearLayout>