<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/background_circle"
                android:backgroundTint="@color/colorGreen500"
                android:padding="8dp"
                android:tint="@color/colorWhite"
                app:srcCompat="@drawable/ic_attach_money"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/tv_title_income"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/prompt_title" />

                <TextView
                    android:id="@+id/tv_price_income"
                    style="@style/Base.TextAppearance.AppCompat.Menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:text="@string/example_price" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_date_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="8dp"
            android:text="@string/example_date" />
    </LinearLayout>

</android.support.v7.widget.CardView>